# biblically-accurate-russian-roulette

./: LICENSE  README.md  bot.py  pyproject.toml  roulette.py
